--- a/src/sass/design/components/_image-banner.scss
+++ b/src/sass/design/components/_image-banner.scss
@@ -36,7 +36,7 @@
 
 @media screen and (max-width: 1200px) {
   .swiper-image .swiper-inner p {
-    max-width: 100%;
+    max-width: calc(100% - 4em);
     margin-bottom: 10px;
   }
 }
